--- a/frontend/src/app/componentes/tela5/tela5.component.html
+++ b/frontend/src/app/componentes/tela5/tela5.component.html
@@ -23,21 +23,15 @@
           <div class="nomeCompleto">
             <label id="firstNome" for="firstName">Nome Completo</label>
             <div class="nomeCompletoInput">
-              <input type="text" placeholder="Primeiro Nome" id="firstName" [(ngModel)]="usuario.nome" name="primeiroNome" required>
-              <input type="text" placeholder="Sobrenome" id="secondName" [(ngModel)]="usuario.sobrenome" name="sobrenome" required>
+              <input type="text" placeholder="Nome" id="firstName" [(ngModel)]="usuario.nome" name="primeiroNome" required>
+             
             </div>
           </div>
           <div class="emailForm">
             <label id="emailTitle" for="email">Email</label>
             <input type="email" placeholder="Digite seu email" id="email" [(ngModel)]="usuario.email" name="email" required>
           </div>
-          <div class="senhaForm">
-            <label id="Senhas1" for="password">Senha</label>
-            <div class="senhaContainer">
-              <input type="password" placeholder="Digite sua senha" id="senha" [(ngModel)]="usuario.senha" name="senha" required>
-              <input type="password" placeholder="Confirme sua senha" id="confirmPassword" name="confirmPassword" required>
-            </div>
-          </div>
+
           <div class="cpfDateContainer">
             <div class="cpfContainer">
               <label id="ColCpf" for="cpf">CPF</label>
