--- a/frontend/src/app/componentes/forget-pass/forget-pass.component.html
+++ b/frontend/src/app/componentes/forget-pass/forget-pass.component.html
@@ -18,7 +18,7 @@
               required
             />
           </div>
-          <button type="submit">Enviar</button> <!-- Botão para solicitar recuperação -->
+          <button type="submit" id="btnenv">Enviar</button > <!-- Botão para solicitar recuperação -->
         </form>
         <p *ngIf="mensagem">{{ mensagem }}</p>
 
