--- a/frontend/src/app/componentes/tela7/tela7.component.html
+++ b/frontend/src/app/componentes/tela7/tela7.component.html
@@ -18,9 +18,9 @@
     </div>
     <p id="criaAtiv">Criar Atividades</p>
     <div class="perguntasAside">
-      <input type="text" [(ngModel)]="nomeAtividade" placeholder="Nome da Atividade:" />
-      <input type="text" [(ngModel)]="tipoAtividade" placeholder="Tipo de Atividade:" />
-      <input type="text" [(ngModel)]="descricaoAtividade" placeholder="Descrição:" />
+      <input id="nomeAtiv" type="text" [(ngModel)]="nomeAtividade" placeholder="Nome da Atividade:" />
+      <input id="tipoAtiv" type="text" [(ngModel)]="tipoAtividade" placeholder="Tipo de Atividade:" />
+      <input id="descAtiv" type="text" [(ngModel)]="descricaoAtividade" placeholder="Descrição:" />
     </div>
     <div class="calendario">
       <div class="header">
