--- a/frontend/src/app/componentes/tela5/tela5.component.html
+++ b/frontend/src/app/componentes/tela5/tela5.component.html
@@ -24,7 +24,7 @@
             <label id="firstNome" for="firstName">Nome Completo</label>
             <div class="nomeCompletoInput">
               <input type="text" placeholder="Nome" id="firstName" [(ngModel)]="usuario.nome" name="primeiroNome" required>
-             
+
             </div>
           </div>
           <div class="emailForm">
@@ -52,7 +52,7 @@
           <h1>Dados Complementares</h1>
           <div class="cepForm" id="cep2">
             <label id="mCep" for="cep">CEP</label>
-            <input type="number" placeholder="Somente Números" id="cep1" [(ngModel)]="usuario.cep" name="cep" required>
+            <input type="number" placeholder="Somente Números" id="cep" [(ngModel)]="usuario.cep"   name="cep" required>
           </div>
           <div class="numeroLogradouro">
             <div class="logradouro">
@@ -64,10 +64,7 @@
               <input type="number" placeholder="Somente Números" id="numberHouse" [(ngModel)]="usuario.numero" name="numero" required>
             </div>
           </div>
-          <div class="complemento">
-            <label id="compl" for="complemento">Complemento</label>
-            <input type="text" placeholder="Apartamento, Ponto de referência e etc..." id="complemento" [(ngModel)]="usuario.complemento" name="complemento" required>
-          </div>
+
           <div class="bairro">
             <label for="bairro">Bairro</label>
             <input type="text" placeholder="Digite seu Bairro" id="bairro" [(ngModel)]="usuario.bairro" name="bairro" required>
@@ -81,7 +78,7 @@
         </div>
         <button type="submit" class="enviarFormulario">Alterar Dados</button>
       </form>
-      <button (click)="inativarParticipante()" class="enviarFormulario">Inativar Participante</button>
+      <button (click)="inativarParticipante()" id="inatPartic" class="enviarFormulario">Inativar Participante</button>
     </section>
   </aside>
 </main>
