--- a/frontend/src/app/componentes/forget-password/forget-password.component.css
+++ b/frontend/src/app/componentes/forget-password/forget-password.component.css
@@ -13,11 +13,13 @@ body{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #43665A;
 }
-#btnVolt{
 
-  align-items: center;
-    position: fixed;
-    left: 59%;
+
+#btnVolt{
+    position: absolute;
+    height: 40px;
+
+    left: 55%;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
@@ -142,45 +144,16 @@ input:hover{
 
 }
 
-@media (min-width:576px){
-
+@media (max-width:1280px) {
   #btnVolt{
-    display: flex;
-    left: 13%;
+    left: 20px;
   }
-
 
 }
 
 
-@media (min-width:800px){
-
-  #btnVolt{
-    display: flex;
-    left: 59%;
-  }
 
 
-}
-@media (min-width:1200px){
-
-  #btnVolt{
-    display: flex;
-    left: 63%;
-  }
-}
-@media (min-width:1250px){
-
-  #btnVolt{
-    display: flex;
-    left: 67%;
-  }
-}
-
-@media  (min-width: 1920px){
-  #btnVolt{
-    left: 69%;
-  }}
 
 
 
